--- a/src/detail/index.css
+++ b/src/detail/index.css
@@ -55,6 +55,14 @@ background-color: rgba(0, 0, 0, 0.3);
 
 }
 
+.responsive{
+    
+    object-fit: cover;
+    object-position:center;
+   
+}
+
+
 
 @media screen and (max-width: 480px){
   
@@ -62,6 +70,10 @@ background-color: rgba(0, 0, 0, 0.3);
     width: 100%;
     max-width: 400px;
     height: auto;
+    object-fit: cover!important;
+    object-position:center!important;
+    display:block;
+    margin-bottom: 10px;
 }
 
 }
